--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,10 @@
 <body>
   <div class="container">
     <ul class="nav nav-tabs">
-      <li><%= link_to "Home", welcome_index_path %></li>
-      <li><%= link_to "About", welcome_about_path %></li>
+      <li><%= link_to "Home", root_path %></li>
+      <li><%= link_to "About", about_path %></li>
+      <li><%= link_to "Wikis", wikis_path %></li>
+      <li><%= link_to "Create New Wiki", new_wiki_path %></li>
       <div class="pull-right">
       <% if user_signed_in? %>
         <li><%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %></li>
@@ -23,6 +25,19 @@
        <% end %>
      </div>
     </ul>
+
+    <% if flash[:notice] %>
+       <div class="alert alert-success">
+         <button type="button" class="close" data-dismiss="alert">&times;</button>
+         <%= flash[:notice] %>
+       </div>
+     <% elsif flash[:alert] %>
+       <div class="alert alert-warning">
+         <button type="button" class="close" data-dismiss="alert">&times;</button>
+         <%= flash[:alert] %>
+       </div>
+     <% end %>
+
    <%= yield %>
   </div>
 </body>
