--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -1,4 +1,6 @@
 <%= form_tag charges_path do %>
-   <h4>Click the button!</h4>
+  <h1>Upgrade Your Membership</h1>
+  <p>With a premium membership, you can now create private wikis. Nice!</p>
+   <h4>Click the button to upgrade!</h4>
    <script class='stripe-button' src="https://checkout.stripe.com/checkout.js" data-key="<%= @stripe_btn_data[:key] %>" data-amount="<%= @stripe_btn_data[:amount] %>" data-description="<%= @stripe_btn_data[:description] %>" ></script>
  <% end %>
