--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,13 @@
       <li><%= link_to "About", about_path %></li>
       <li><%= link_to "Wikis", wikis_path %></li>
       <li><%= link_to "Create New Wiki", new_wiki_path %></li>
-      <div class="pull-right">
+      <% if current_user.standard? %>
+        <li><%= link_to "Upgrade Your Account", new_charge_path, :class => 'navbar-link' %></li>
+      <% elsif current_user.premium? %>
+        <li><%= link_to "Downgrade Your Account", new_downgrade_path, :class => 'navbar-link' %></li>
+      <% end %>
       <% if user_signed_in? %>
+      <div class="pull-right">
         <li><%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %></li>
         <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %></li>
         <li>Signed in as:<strong><%= current_user.email %></strong></li>
