Added Redcarpet Gem and Markdown

--- a/app/views/wikis/new.html.erb
+++ b/app/views/wikis/new.html.erb
@@ -6,7 +6,8 @@
      <ul>
        <li>Make sure it's correct and detailed.</li>
        <li>All information is sourced.</li>
-       <li>Fake news will get you banned!</li>
+       <li>Fake news will get you banned.</li>
+       <li>Feek free to use Markdown!</li>
      </ul>
    </div>
    <div class="col-md-8">
