--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -2,9 +2,9 @@
 
  <div class="row">
    <div class="col-md-8">
-     <p><%= @wiki.body %></p>
+     <p><%= markdown(@wiki.body) %></p>
      <small>
-       submitted <%= time_ago_in_words(@wiki.created_at) %> ago by <%= @wiki.user %>
+       submitted <%= time_ago_in_words(@wiki.created_at) %> ago by <%= @wiki.user.email %>
      </small>
    </div>
    <div class="col-md-4">
