--- a/app/views/wikis/edit.html.erb
+++ b/app/views/wikis/edit.html.erb
@@ -12,5 +12,9 @@
   </div>
   <div class="col-md-8">
     <%= render partial: 'form' %>
+    <% if @wiki.user == current_user || current_user.try(:admin?) #current_user || current_user.admin? %>
+      <%= link_to "Manage collaborators", wiki_collaborators_path(@wiki), class: "btn btn-info" %>
+    <% end %>
+    <%= link_to 'Back', wikis_path, class: "pull-right" %>
   </div>
 </div>
