--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -4,11 +4,22 @@
    <div class="col-md-8">
      <p><%= markdown(@wiki.body) %></p>
      <small>
-       submitted <%= time_ago_in_words(@wiki.created_at) %> ago by <%= @wiki.user.email %>
-     </small>
+      submitted <%= time_ago_in_words(@wiki.created_at) %> ago by <%= @wiki.user.email %>
+     <p>
+      <% if @wiki.private == true %>
+        This is a private wiki.
+      <% else %>
+        This is a public wiki.
+      <% end %>
+    </p>
+   </small>
    </div>
    <div class="col-md-4">
      <%= link_to "Edit", edit_wiki_path(@wiki), class: 'btn btn-success' %>
      <%= link_to "Delete Post", @post, method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this post?'} %>
+     <h4>Collaborators</h4>
+        <% @wiki.users.each do |user| %>
+       <p><%= user.email %>
+         <% end %>
    </div>
  </div>
